--- a/src/public/sass/pages/_product-detail.scss
+++ b/src/public/sass/pages/_product-detail.scss
@@ -106,6 +106,9 @@
 
     div {
         line-height: 1.75;
+        &.incentive {
+            line-height:1.25;
+        }
     }
     ul {
         color: $color-default-light;
