Conditional handling for modal contact form on paid search night pages that differes from day pages

--- a/src/public/sass/helpers/_variables.scss
+++ b/src/public/sass/helpers/_variables.scss
@@ -26,6 +26,7 @@ $foundation-small: 0px !default; // foundation
 $foundation-med: 642px !default; // foundation
 $foundation-large: 1026px !default; // foundation
 $modal-is-enabled: $foundation-large;
+$tablet-landscape: 1024px;
 
 // colors
 $color-default: #383d3f;
