Various IE8 related bug fixes

--- a/src/public/sass/layout/_header.scss
+++ b/src/public/sass/layout/_header.scss
@@ -169,9 +169,9 @@
         }
     }
     .velux-logo {
-        display: inline-block;
+        /*display: inline-block;*/
         height: $masthead-height;
-        line-height: $masthead-height;
+        /*line-height: $masthead-height;*/
         width: 100%;
 
         img {
