Paid search night pages intro list should now display on mobile and tablet

--- a/src/public/sass/pages/_paid-search.scss
+++ b/src/public/sass/pages/_paid-search.scss
@@ -227,7 +227,9 @@
             }
 
             @include bp($foundation-small, $tablet) {
-                display: none;
+                width:100%;
+                padding:0;
+                height:auto;
             }
             @include bp($tablet, 1024px) {
                 width: 40%;
