Fix our principles for IE8

--- a/src/public/sass/layout/_ie8.scss
+++ b/src/public/sass/layout/_ie8.scss
@@ -53,4 +53,14 @@
             z-index:0;
         }
     }
+
+    .principles {
+        .principle-container {
+            padding:6% 0;
+
+            .principle {
+                padding:3% 5%
+            }
+        }
+    }
 }
