Fixed product image size in IE8

--- a/src/public/sass/layout/_ie8.scss
+++ b/src/public/sass/layout/_ie8.scss
@@ -74,4 +74,11 @@
             }
         }
     }
+
+    .product-detail {
+        .product-image {
+            height:300px;
+            width:300px;
+        }
+    }
 }
