--- a/src/public/sass/styles.scss
+++ b/src/public/sass/styles.scss
@@ -19,7 +19,7 @@
 @import "layout/nav-secondary";
 @import "layout/page";
 @import "layout/paid-search-header";
-@import "layout/ie8";
+@import "layout/ie";
 
 @import "modules/accessories";
 @import "modules/backgrounds";
