--- a/src/public/sass/modules/_contact-modal.scss
+++ b/src/public/sass/modules/_contact-modal.scss
@@ -79,6 +79,7 @@
         display: block;
         line-height: 1.25em;
         padding: .75em;
+        font-size:1em;
 
         &[type="submit"] {
             @extend %btn;
