--- a/src/public/sass/layout/_footer.scss
+++ b/src/public/sass/layout/_footer.scss
@@ -2,19 +2,20 @@
 
     .icon-five-star {
         line-height: 0;
-        height: 90px;
+        height: 143px;
         width: 90px;
     }
 }
 .five-star--bottom {
 
     @include bp($foundation-small, $tablet) {
-        bottom: 35px;
-        left: 8%;
+        bottom: 350px;
+        right: 8%;
         position: absolute;
     }
     @include bp($foundation-med, $tablet) {
-        bottom: 85px;
+        left:8%;
+        bottom: 65px;
     }
     @include bp($tablet) {
         display: none;
@@ -95,12 +96,13 @@
         width: 10em;
 
         @include bp($foundation-small, $tablet) {
-            bottom: 11px;
+            bottom: 15px;
             left: 8%;
             position: absolute;
         }
         @include bp($foundation-med, $tablet) {
             left: 8%;
+            bottom: 11px;
         }
         @include bp($tablet) {
             float: left;
@@ -255,7 +257,7 @@
         }
 
         @include bp($foundation-small, $foundation-med) {
-            bottom: 70px;
+            bottom: 15px;
             left: 58%;
             position: absolute;
         }
@@ -270,7 +272,7 @@
     }
 
     @include bp($foundation-small, $foundation-med) {
-        padding-bottom: 180px;
+        padding-bottom: 70px;
     }
     @include bp($foundation-med, $tablet) {
         padding-bottom: 80px;
@@ -296,7 +298,7 @@
         font-family: $font-family-display;
         line-height: 2;
         min-height: 90px;
-        width: 100%;
+        padding-right:100px;
 
         a, a:visited {
             color: $color-grey;
@@ -327,13 +329,16 @@
                 display: inline-block;
                 margin-bottom: 0;
                 vertical-align: top;
-                width: 50%;
+                width: 55%;
+                padding-right:5%;
             }
         }
         .numbers {
 
             @include bp($foundation-med) {
-                margin-top: 2em;
+                width:39%;
+                padding-right:1%;
+                //margin-top: 2em;
             }
         }
         .hours {
@@ -341,10 +346,14 @@
             width: 100%;
 
             @include bp($foundation-med) {
-                width: 33%;
+                width: 31%;
+                padding-right:2%;
             }
         }
-
+        
+        @include bp($foundation-med) {
+            padding-right:0;
+        }
         @include bp($tablet) {
             width: 90%;
         }
