IE8 fixes to blinds carousels. IE8 fix for tax credit. Removed incentive icons for mobile

--- a/src/public/sass/layout/_ie.scss
+++ b/src/public/sass/layout/_ie.scss
@@ -93,6 +93,30 @@
            background-image: url('/assets/images/play-icon.png');
        }
    }
+
+   .blinds-carousel {
+        background:$color-grey-light-bg;
+
+        h2 {
+            color:$color-default !important;
+        }
+   }
+
+   .replacing {
+        background-position: center bottom;
+        .incentives {
+            display:none;
+        }
+        
+        @include bp($tablet) {
+            padding-top:150px;
+            padding-bottom:150px;
+
+            .incentives {
+                display:block;
+            }
+        }
+   }
 }
 .ie9 {
     .hero {
