Paid search updates. IE8 fix for footer. Headline weight updates for results.

--- a/src/public/sass/layout/_ie.scss
+++ b/src/public/sass/layout/_ie.scss
@@ -117,6 +117,10 @@
             }
         }
    }
+
+   .nav-footer__container {
+        text-align:center !important;
+   }
 }
 .ie9 {
     .hero {
