More 301 redirect. Added in planner page

--- a/src/public/sass/modules/_carousels.scss
+++ b/src/public/sass/modules/_carousels.scss
@@ -99,6 +99,7 @@
     @extend %centered;
     @extend %inline-block;
     height: $icon;
+    cursor:pointer;
     line-height: 1;
     padding: 16px 0 14px;
     position: absolute;
