--- a/src/public/sass/layout/_header.scss
+++ b/src/public/sass/layout/_header.scss
@@ -72,6 +72,7 @@
         background: transparent !important;
         color: $color-primary;
         display: block;
+        cursor: pointer;
         height: $masthead-mobile;
         padding: 0;
         position: absolute;
