added nonindex page and installer handling. css updates - a few for IE8. Adjusted phone area for consistent padding with subnav

--- a/src/public/sass/layout/_header.scss
+++ b/src/public/sass/layout/_header.scss
@@ -164,8 +164,12 @@
             width: 100%;
 
             .number {
+                margin-right:2em;
                 @include bp($foundation-small, $mobile-landscape) {
                     display: none;
+                }
+                @include bp($tablet) {
+                    margin-right:0;
                 }
             }
         }
