--- a/src/public/sass/layout/_nav-header.scss
+++ b/src/public/sass/layout/_nav-header.scss
@@ -215,7 +215,7 @@
         .nav-header--is-open & {
             display: block;
         }
-        .popout-velux-logo {
+        .popout-velux-logo.nav-header__link {
             display: block;
             margin-top: 15px;
 
