Updated homepage installer promo to word limit and adjusted font size. Updated installer admin promotions to remove non-relevant promo copy. Updated installer admin photo section with instructional copy

--- a/src/public/sass/modules/_welcome.scss
+++ b/src/public/sass/modules/_welcome.scss
@@ -142,6 +142,10 @@
 
             h3 {
                 margin-bottom: 1em;
+                @include bp($foundation-large) {
+                    font-size:1em;
+                    line-height:1.5;
+                }
             }
 
             @include bp($foundation-large) {
