--- a/src/public/sass/modules/_testimonials.scss
+++ b/src/public/sass/modules/_testimonials.scss
@@ -13,6 +13,11 @@
         margin-bottom: 2.75em;
     }
 
+    .testimonial-name-source {
+        font-style:italic;
+        font-size:.875em;
+    }
+
     @include bp($my-large) {
         padding: 0 15%;
     }
