Updates to blinds swatch css. Updates to About carousels for captions and mobile note. Added installer URL to contact page

--- a/src/public/sass/modules/_carousels.scss
+++ b/src/public/sass/modules/_carousels.scss
@@ -230,3 +230,42 @@
         border-bottom: 3px solid $color-blue;
     }
 }
+.slick-slider {
+    .gallery-caption {
+        font-style: italic;
+        color:#fff;
+        min-height:30px;
+        background:url(/assets/images/caption-bg.png) top left repeat;
+        position: absolute;
+        bottom:0px;
+        left:0;
+        width:100%;
+        z-index:2;
+        display:none;
+
+        @include bp($tablet) {
+            display:block;
+        }
+
+        &.caption-empty {
+            background:none;
+        }
+    }
+    .gallery-caption p {
+        margin:10px 20px;
+        text-align:center;
+        color:#fff;
+    }
+}
+.mobile-gallery-instruction {
+    @include bp($tablet) {
+        display:none;
+    }
+
+    p {
+        margin:10px auto;
+        text-align:center;
+        font-style:italic;
+        font-size:.875em;
+    }
+}
