--- a/src/public/sass/pages/_blinds.scss
+++ b/src/public/sass/pages/_blinds.scss
@@ -110,6 +110,8 @@
 
             img {
                 max-width: 125px;
+                max-height: 125px;
+                width:100%;
             }
         }
     }
