--- a/src/admin/assets/css/admin_styles.css
+++ b/src/admin/assets/css/admin_styles.css
@@ -575,6 +575,9 @@ h1 a.header_action, h2 a.header_action
 	font-family:'Karla', Verdana, Arial, Helvetica, sans-serif;
 	text-transform: uppercase;
 }
+.login .error_alert p {
+	color:#ff0000;
+}
 .required { margin-left:10px; font-size:11px; font-weight:300; color:#ff0000;}
 
 /********************************* End Error Message Handling **********************************/
