added class to searchbar on homepage and changed styling to use class instead of input[type=search] because of safari css issue

--- a/src/public/sass/modules/_forms.scss
+++ b/src/public/sass/modules/_forms.scss
@@ -53,7 +53,7 @@
         border: 10px solid #505253;
         border-radius: 10px;
     }
-    input[type="search"] {
+    .fancy-search--bar {
         @extend %bold;
         @extend %font-display;
         @extend %upper;
