--- a/src/public/sass/modules/_forms.scss
+++ b/src/public/sass/modules/_forms.scss
@@ -61,12 +61,12 @@
         float: left;
         font-size: 13px;
         height: 51px;
-        padding: 4px 0 0;
+        // padding: 4px 0 0;
         width: 85%;
 
         @include bp($tablet) {
             font-size: 14px;
-            height: 56px;
+            height: 55px;
         }
         &:focus {
             outline: none;
