adjusted search button padding to even out top/bottom and made corresponding adjustment to ie styles

--- a/src/public/sass/layout/_ie.scss
+++ b/src/public/sass/layout/_ie.scss
@@ -5,11 +5,10 @@
         }
     }
 
-    .fancy-search input[type=search] {
-        padding:12px 0;
-        height:54px;
+    .fancy-search .fancy-search--bar {
+        height:53px;
         font-size:14px;
-        line-height:28px;
+        line-height:53px;
     }
 
     .dealer-promo {
