--- a/src/public/sass/modules/_paid-search-mobile.scss
+++ b/src/public/sass/modules/_paid-search-mobile.scss
@@ -18,6 +18,7 @@
         background: rgba(36,39,40,.9);
         padding: 1em 3em;
         width: 100%;
+        cursor:pointer;
 
         .icon-plus {
             margin-left: 2em;
@@ -33,12 +34,12 @@
             vertical-align: middle;
         }
 
-        @include bp($tablet-landscape) {
+        @include bp($foundation-large) {
             display: none !important;
         }
 
         &.ps-bar-day {
-            @include bp($tablet) {
+            @include bp($foundation-large) {
                 display: none !important;
             }
         }
