Styling for inline bazaarvoice stuff

--- a/src/public/sass/pages/_category.scss
+++ b/src/public/sass/pages/_category.scss
@@ -55,6 +55,11 @@
     }
 }
 
+.bv-inline-rating {
+    position: absolute;
+    left:50%;
+    margin-left:-50px;
+}
 
 /*-----------------------
   @RESIDENTIAL SKYLIGHTS
