--- a/src/public/sass/modules/_carousels.scss
+++ b/src/public/sass/modules/_carousels.scss
@@ -269,3 +269,15 @@
         font-size:.875em;
     }
 }
+
+
+/*-----------------------
+  @CEILING TYPES
+------------------------*/
+
+[data-carousel-type="ceiling-types"] {
+    .slick__item {
+        margin-bottom: 20px;
+    }
+}
+
