--- a/src/public/sass/modules/_icons.scss
+++ b/src/public/sass/modules/_icons.scss
@@ -22,6 +22,26 @@
 }
 
 /*-----------------------
+  @ICON NEXT TO TEXT
+------------------------*/
+.icon-text {
+    height: 16px;
+    position: relative;
+    top: -2px;
+    vertical-align: middle;
+    width: 16px;
+}
+
+.icon-text--left {
+    margin-left: -5px;
+    margin-right: 5px;
+}
+
+.icon-text--right {
+    margin-left: 5px;
+}
+
+/*-----------------------
   @MENU
 ------------------------*/
 .icon-hamburger {
@@ -289,4 +309,32 @@
     .icon__svg {
         fill: #868686;
     }
+}
+
+
+/*-----------------------
+  @CHEVRONS
+------------------------*/
+.icon-chevron--down {
+    fill: #949799;
+}
+
+.icon-chevron--down--reversed {
+    fill: #fff;
+}
+
+.icon-chevron--right {
+    fill: #949799;
+}
+
+.icon-chevron--right--reversed {
+    fill: #fff;
+}
+
+.icon-chevron--left {
+    fill: #949799;
+}
+
+.icon-chevron--left--reversed {
+    fill: #fff;
 }
