--- a/src/public/sass/styles.scss
+++ b/src/public/sass/styles.scss
@@ -23,6 +23,7 @@
 @import "layout/ie";
 
 @import "modules/accessories";
+@import "modules/atomic";
 @import "modules/backgrounds";
 @import "modules/breadcrumbs";
 @import "modules/buttons";
@@ -34,6 +35,7 @@
 @import "modules/hero";
 @import "modules/hooks";
 @import "modules/icons";
+@import "modules/info-boxes";
 @import "modules/incentives";
 @import "modules/locator";
 @import "modules/map";
@@ -57,6 +59,7 @@
 @import "pages/product-detail";
 @import "pages/products";
 @import "pages/promotions";
+@import "pages/replacing";
 @import "pages/styleguide";
 @import "pages/why-skylights";
 @import "modules/vs";
