--- a/src/public/sass/pages/_installing.scss
+++ b/src/public/sass/pages/_installing.scss
@@ -143,7 +143,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     padding-bottom: 20%;
-    
+
     .first {
         @include bp($foundation-small, $foundation-med) {
             padding: 0;
@@ -200,7 +200,12 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    padding: 10% 20%;
+    padding: 10%;
+
+    @include bp($my-large) {
+         padding-right: 20%;
+         padding-left: 20%;
+    }
 
     .brochure {
         text-align: right;
@@ -212,9 +217,6 @@
 
             @include bp($foundation-med) {
                 bottom: -40px;
-            }
-            @include bp($foundation-large) {
-                right: 100px;
             }
         }
 
@@ -230,27 +232,12 @@
             text-align: center;
             padding-right: 0;
         }
-        @include bp($foundation-large) {
-            padding-right: 10%;
-        }
     }
 
     .last {
         @include bp($foundation-small, $foundation-med) {
             padding: 0;
         }
-    }
-
-    @include bp($foundation-small, $foundation-med) {
-        padding: {
-            bottom: 10% !important;
-            left: 10%;
-            right: 10%;
-        }
-    }
-
-    @media only screen and (min-width:1400px){
-         padding: 10% 22% 10% 30%;
     }
 }
 
@@ -355,10 +342,10 @@ header{
 .btn-play--centered{
     .icon-play:before{
         opacity: 0;
-    } 
+    }
     .icon-play{
         border: 2px solid #fff;
-    } 
+    }
 }
 
 .beta{
