Update text and remove buttons

--- a/src/public/sass/pages/_installing.scss
+++ b/src/public/sass/pages/_installing.scss
@@ -257,7 +257,7 @@
 
 .alpha{
 
-    text-transform: uppercase;
+    text-transform: capitalize;
     font-family: $font-family-display-regular;
     letter-spacing: .5px;
 
