--- a/src/public/sass/helpers/_utilities.scss
+++ b/src/public/sass/helpers/_utilities.scss
@@ -459,3 +459,18 @@ a.cta-text {
         padding-bottom: $row-padding-vertical;
     }
 }
+
+
+/*-----------------------
+  @PAGE Header
+------------------------*/
+.alpha{
+
+    text-transform: capitalize;
+    letter-spacing: .5px;
+
+    @media only screen and (min-width: 43.75em){
+        font-size: 3em;
+        line-height: 1.2;
+    }
+}
